--- a/question_parser/src/docker-compose.yaml
+++ b/question_parser/src/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3.9'
 
 services:
   db:
+    container_name: postgres_container
     image: postgres
     ports: 
       - 42069:5432
@@ -24,7 +25,28 @@ services:
           memory: 4G 
     volumes:
       - bewise:/var/lib/postgresql/data
+    networks:
+        - postgres
 
+  pgadmin:
+    container_name: pgadmin_container
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "test@bee.com"
+      PGADMIN_DEFAULT_PASSWORD: "12345"
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    ports: 
+      - 42070:80
+    restart: unless-stopped
+    networks:
+        - postgres
 volumes:
   bewise:
-    driver: local
+  pgadmin-data:
+
+networks:
+  postgres:
+    driver: bridge
+
