prepared alembic migration

--- a/question_parser/src/backend/alembic.ini
+++ b/question_parser/src/backend/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:postgres@localhost/bewise_get_questions
+sqlalchemy.url = postgresql://localhost:42069/bewise_get_questions?user=postgres&password=postgres
 
 
 [post_write_hooks]
